# Lego-City-Undercover-Decompilation

./: .gitignore  CMakeLists.txt  README.md  renovate.json
.github/scripts/: gen_report.py  report_pb2.py
.github/workflows/: compile-check.yml  lint.yml  update-progress.yml
docs/: BUILDING.md  CONTRIBUTING.md  DECOMPILERS.md
src/edlevel/: CompressUtil.cpp  CompressUtil.h  Random.cpp  Random.h
src/edtools/: audio_system.cpp  audio_system.h  endian_utils.cpp  endian_utils.h
src/kestrel/: TimeOfDay.cpp  TimeOfDay.h
src/kestrel/script/actions/: Achievements_FairgroundRideDone.cpp  Achievements_GraffitiDone.cpp  Achievements_LegoStoreDone.cpp  Achievements_LegoStoreDone.h  Achievements_MarkChapterComplete.cpp  Achievements_MarkChapterStart.cpp  Achievements_ShieldsDone.cpp  ActionInstanceData.cpp  ActionInstanceData.h  CancelHint.cpp  DebugMsg.cpp  DisableSkydiveWind.cpp  EndE3Demo.cpp  EndE3Demo.h  FastTravelStationScript.cpp  FastTravelStationScript.h  Job_Break.cpp  Job_Break.h  LockCharacterDebug.cpp  SActionDebugMsg.cpp  SActionDebugMsg.h  SAction_AILocator.cpp  SAction_AILocator.h  SAction_AILocator2Text.cpp  SAction_AILocator2Text.h  SAction_AILocatorSet.cpp  SAction_AILocatorSet.h  SAction_AILocatorSet2Text.cpp  SAction_AILocatorSet2Text.h  SAction_AILocatorSetGetLocator.cpp  SAction_AILocatorSetGetLocator.h  SAction_AILocatorSetSize.cpp  SAction_AILocatorSetSize.h  SAction_Achievements_FairgroundRideDone.cpp  SAction_Achievements_FairgroundRideDone.h  SAction_Achievements_GraffitiDone.cpp  SAction_Achievements_GraffitiDone.h  SAction_Achievements_LegoStoreDone.cpp  SAction_Achievements_MarkChapterComplete.cpp  SAction_Achievements_MarkChapterComplete.h  (+360 more)
src/legoapi/: BitArray.cpp  BitArray.h  optionssave.cpp  optionssave.h  players.cpp  players.h  savegameoptions.cpp  savegameoptions.h
src/legogame/: text.cpp
src/nu2api/: CountdownTimer.cpp  CountdownTimer.h  Score.cpp  Score.h
src/nucore/: NuCheckSum.cpp  NuCheckSum.h  NuInputDevice.cpp  NuInputDevice.h  NuInputDevicePS.cpp  NuInputDevicePS.h  NuLoadTimer.h  NuLocaleManager.cpp  NuLocaleManager.h  NuThreadBase.cpp  NuThreadBase.h  nu2api.cpp  nu2api.h  nucore.cpp  nucore.h
src/numath/: angle.cpp  angle.h  geometry.h  matrix.h  plane.h  random.cpp  random.h  scalar.h  types.h  vector.cpp  vector.h
src/support/: CommonString.cpp  CommonString.h
toolchain/: ToolchainNX64.cmake
tools/: build.py  cache-version.json  setup.py
